fixed blur behind text

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -46,3 +46,18 @@ input[type="number"]::-webkit-outer-spin-button {
     transform: scale(100%);
   }
 }
+
+.mask-gradient {
+  mask-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 1) 50%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 1) 50%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
